fixed wrap style issue on days, fixed startDay on Sunday bug

--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -1,5 +1,5 @@
 .calendar {
-  width: calc(320px - 48px);
+  width: calc(320px -12px);
   border: 1px solid lightgrey;
   box-shadow: 2px 2px 2px #eee;
   margin: 0 auto;
@@ -17,7 +17,7 @@
     display: flex;
     flex-wrap: wrap;
     .day {
-      width: 14.2%;
+      width: 14.1%;
       height: 40px;
       display: flex;
       align-items: center;
